--- a/scripts/Pages/FreeTrial/Checkout/Checkout_Right_Side/CustomerReviews/CustomerReviews.css
+++ b/scripts/Pages/FreeTrial/Checkout/Checkout_Right_Side/CustomerReviews/CustomerReviews.css
@@ -10,14 +10,15 @@
     padding-bottom: 8px;
 }
 .profile_image {
-    width: 15%;
-    margin-right: 20px;
+    /* width: 15%;
+    margin-right: 20px; */
+    display: none;
 }
 .profile_image img {
     width: 100%;
 }
 .profile_data {
-    width: 85%;
+    width: 100%;
 }
 .profile_data_1 p {
     font-family: 'Nexa';
@@ -70,10 +71,10 @@
         font-size: 12px;
         line-height: 16px;
     }
-    .profile_image {
+    /* .profile_image {
         width: 20%;
         margin-right: 16px;
-    }
+    } */
     .profile_data {
         width: 80%;
     }
