--- a/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/Delivery/Delivery.css
+++ b/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/Delivery/Delivery.css
@@ -133,6 +133,14 @@
 
 
 @media screen and (max-width:576px) {
+    .slick-dots li {
+        width: 10px !important;
+        height: 10px !important;
+    }
+    .slider_data_1 {
+        max-width: 140px;
+        height: 140px;
+    }
     .deliver_heading h4 {
         font-size: 16px;
         line-height: 20px;
