--- a/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/FAQ/FAQ.css
+++ b/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/FAQ/FAQ.css
@@ -116,6 +116,10 @@
 
 @media screen and (max-width: 576px) {
     .faq_section .faq_data {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .faq_section .faq_data {
         padding: 16px;
     }
     .faq_section .faq_butons {
