--- a/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/ChooseType/ChooseType.css
+++ b/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/ChooseType/ChooseType.css
@@ -8,6 +8,14 @@
     margin: 0;
 }
 
+.Choose_type_section .product_image_1 img {
+    width: 125px;
+}
+
+.Choose_type_section .product_image_2 img{
+    width: 125px;
+}
+
 .Choose_type_section .choose_heading {
     padding-bottom: 20px;
     position: relative;
@@ -62,7 +70,6 @@
     text-align: center;
     letter-spacing: 0.5px;
     margin: 0;
-    padding-top: 2rem;
 }
 
 .images_data {
@@ -130,5 +137,5 @@
     .images_data img {
         max-width: 80px;
     }
-    
+
 }
