--- a/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/OrderConfirmation/OrderConfirmation.css
+++ b/scripts/Pages/FreeTrial/Checkout/Checkout_Left_Side/OrderConfirmation/OrderConfirmation.css
@@ -135,7 +135,6 @@
 .shipping_img {
     font-family: 'Nexa';
     font-style: normal;
-    font-weight: 700;
     font-size: 16px;
     line-height: 20px;
     color: #4F4F4F;
@@ -147,10 +146,9 @@
 .shipping_data h5 {
     font-family: 'Nexa';
     font-style: normal;
-    font-weight: 700;
     font-size: 16px;
     line-height: 20px;
-    color: #7AD8E7;
+    color: #4F4F4F;
     margin: 0;
 }
 
