--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -7,11 +7,6 @@
 
 
 
-
-
-
-
-
 @font-face{
 font-family:"nexa-light";
 src:url(nexa-light.otf) format("opentype");
@@ -37,6 +32,12 @@ html {
 }
 
 
+/* PDP Page */
+
+
+
+
+/* *** */
 
 
 @media (max-width:400px){
