--- a/sections/custom-css-bs.liquid
+++ b/sections/custom-css-bs.liquid
@@ -253,6 +253,285 @@
       }
       
       </style>
+
+
+
+             <!--         Free-Trial           -->
+      
+      {% elsif page.handle == "free-trial-landing-page" %}
+
+              <style>
+
+              .type_custom_html:last-child .code_setting {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+
+
+          .wrap_title h3 {
+              font-family: Ambroise-Regular!important;
+              color: black !important;
+              font-size: 36px;
+          }
+
+      
+          .type_feature_columns:nth-child(3) img{
+          max-width:100% !important;
+          }
+
+          .type_feature_columns:nth-child(11) .category-content:hover{
+              box-shadow: 0 0 10px lightgray, 0 5px 15px lightgray;
+          }  
+          
+          .type_feature_columns:nth-child(11) p {
+              font-size: 14px;
+          }
+      
+          .type_feature_columns:nth-child(11) .category-content {
+              padding: 30px 10px;
+              box-shadow: 0 1px 3px #0000001f, 0 0 #0000003d;
+              background: white;
+          }
+
+          .type_feature_columns:nth-child(11) .category-content path {
+              fill: #e3d0bd;
+          }
+
+    
+         .type_feature_columns:nth-child(3) .category-content {
+              padding-top: 15px;
+              margin-top: -12%;
+          }
+
+        .type_image_text:nth-child(6) a {
+          display: flex;
+          align-items: center;
+          width: 7rem;
+          justify-content: center;
+          background: #7AD8E7;
+          border-radius: 0;
+      }
+      
+      .type_image_text:nth-child(6) .insta-ss {
+          display: none !important;
+      }
+      .type_image_text:nth-child(6) svg {
+          display: none !important;
+      }
+      .type_image_text:nth-child(7) a {
+          display: flex;
+          align-items: center;
+          width: 7rem;
+          justify-content: center;
+          background: #7AD8E7;
+          border-radius: 0;
+      }
+      
+      .type_image_text:nth-child(7) .insta-ss {
+          display: none !important;
+      }
+      .type_image_text:nth-child(7) svg {
+          display: none !important;
+      }
+      
+      .type_image_text:nth-child(8) a {
+          display: flex;
+          align-items: center;
+          width: 7rem;
+          justify-content: center;
+          background: #7AD8E7;
+          border-radius: 0;
+      }
+      
+      .type_image_text:nth-child(8) .insta-ss {
+          display: none !important;
+      }
+      .type_image_text:nth-child(8) svg {
+          display: none !important;
+      }
+
+        .type_image_text:nth-child(9) a {
+          display: flex;
+          align-items: center;
+          width: 7rem;
+          justify-content: center;
+          background: #7AD8E7;
+          border-radius: 0;
+      }
+      
+      .type_image_text:nth-child(9) .insta-ss {
+          display: none !important;
+      }
+      .type_image_text:nth-child(9) svg {
+          display: none !important;
+      }
+          
+      .type_image_text:nth-child(6) .txt_col_img {
+          transform: translate(-3rem);
+          width: 50% !important;
+          max-width: 50% !important;
+          flex: 100% !important;
+      }
+      
+      .type_image_text:nth-child(7) .txt_col_img {
+          transform: translate(3rem);
+          width: 50% !important;
+          max-width: 50% !important;
+          flex: 100% !important;
+      }
+      
+      .type_image_text:nth-child(8) .txt_col_img {
+          transform: translate(-3rem);
+          width: 50% !important;
+          max-width: 50% !important;
+          flex: 100% !important;
+      }
+       .type_image_text:nth-child(9) .txt_col_img {
+          transform: translate(3rem);
+          width: 50% !important;
+          max-width: 50% !important;
+          flex: 100% !important;
+      }
+
+        .type_feature_columns:nth-child(13) .cat_space_item {
+            border-radius: 15px;
+            padding: 30px 10px;
+        }
+      .type_feature_columns:nth-child(13) .category-content {
+    padding: 30px 10px;
+    box-shadow: 0 1px 3px #0000001f, 0 0 #0000003d;
+    background: white;
+}
+.type_feature_columns:nth-child(13) .category-content:hover {
+    box-shadow: 0 0 10px lightgrey, 0 5px 15px lightgrey;
+}
+
+          .type_feature_columns:nth-child(13) .cat_space_30 {
+            display: flex!important;
+            gap: 20px;
+        }
+
+          
+        @media (max-width:1250px){
+      
+      
+        .type_image_text:nth-child(6) .txt_col_img {
+          transform: translate(-3rem);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+      
+          .type_image_text:nth-child(7) .txt_col_img {
+          transform: translate(3rem);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+        
+       .type_image_text:nth-child(8) .txt_col_img {
+          transform: translate(-3rem);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+
+        .type_image_text:nth-child(9) .txt_col_img {
+          transform: translate(3rem);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+      
+        
+      }
+      
+      
+      
+      @media (max-width:991px){
+      
+      
+          .type_image_text:nth-child(6) .txt_col_img {
+          transform: translate(0);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+         .type_image_text:nth-child(7) .txt_col_img {
+          transform: translate(0);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+          .type_image_text:nth-child(8) .txt_col_img {
+          transform: translate(0);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+          .type_image_text:nth-child(9) .txt_col_img {
+          transform: translate(0);
+          width: 41.666667% !important;
+          max-width: 100% !important;
+          flex: 0 0 41.666667% !important;
+      }
+      
+          
+        
+      }
+      
+      
+      
+      @media (max-width:767px){
+        
+        
+      .type_image_text:nth-child(7) .row {
+          flex-direction: column-reverse;
+      }  
+        
+        .type_image_text:nth-child(9) .row {
+          flex-direction: column-reverse;
+      }
+      
+        .type_image_text:nth-child(6) .txt_col_img {
+          transform: translate(0px,0px);
+          width: 90%!important;
+          max-width: 90%!important;
+          flex: 90%!important;
+          margin: auto;
+          margin-top: -30px !important;
+      }
+         .type_image_text:nth-child(7) .txt_col_img {
+          transform: translate(0px,0px);
+          width: 90%!important;
+          max-width: 90%!important;
+          flex: 90%!important;
+          margin: auto;
+          margin-top: -30px !important;
+      }
+          .type_image_text:nth-child(8) .txt_col_img {
+          transform: translate(0);
+          width: 90%!important;
+          max-width: 90%!important;
+          flex: 90%!important;
+          margin: auto;
+          margin-top: -30px !important;
+      }
+           .type_image_text:nth-child(9) .txt_col_img {
+          transform: translate(0);
+          width: 90%!important;
+          max-width: 90%!important;
+          flex: 90%!important;
+          margin: auto;
+          margin-top: -30px !important;
+      }
+      
+        
+      }
+
+        </style>
+      
       
 
 
